# Parallel-Computing-Homework

./: CMakeLists.txt  FifthTaskReport.md  FirstTaskReport.md  FourthTaskReport.md  SecondTaskReport.md  ThirdTaskReport.md  main.cpp
FifthTask/: a.out  main.cpp
FirstTask/: FirstTask.cpp  FirstTask.h
FourthTask/: FourthTask.cpp  FourthTask.h
SecondTask/: SecondTask.cpp  SecondTask.h
ThirdTask/: ThirdTask.cpp  ThirdTask.h
